# cookiecutter-qiime2-plugin

./: .gitignore  LICENSE  README.md  cookiecutter.json  copier.yaml
.github/workflows/: ci.yml
extensions/: context.py
hooks/: post_gen_project.py  pre_prompt.py
template/{{ package_name }}/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  {{ _copier_conf.answers_file }}
template/{{ package_name }}/.github/workflows/: ci.yml  release-env.yml
template/{{ package_name }}/environment-files/: {{ package_name }}-qiime2-{{ target_distro }}-dev.yml  {{ package_name }}-qiime2-{{ target_distro }}-release.yml  {{ package_name }}-qiime2-{{ target_distro }}-{{ target_epoch }}.yml
template/{{ package_name }}/{{ module_name }}/: __init__.py  _methods.py  _version.py  plugin_setup.py
template/{{ package_name }}/{{ module_name }}/tests/: __init__.py  test_methods.py
{{ cookiecutter.package_name }}/: LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
{{ cookiecutter.package_name }}/.github/workflows/: ci.yml
{{ cookiecutter.package_name }}/ci/recipe/: meta.yaml
{{ cookiecutter.package_name }}/environments/: {{ cookiecutter.package_name }}-qiime2-{{ cookiecutter.target_distro }}-{{ cookiecutter.target_epoch }}.yml
{{ cookiecutter.package_name }}/{{ cookiecutter.module_name }}/: _methods.py  _version.py  citations.bib  plugin_setup.py
{{ cookiecutter.package_name }}/{{ cookiecutter.module_name }}/tests/: __init__.py  test_methods.py
{{ cookiecutter.project_name }}/: Makefile  README.md  setup.cfg  setup.py
{{ cookiecutter.project_name }}/ci/recipe/: meta.yaml
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/: __init__.py  _version.py  plugin_setup.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/tests/: test_methods.py
