[project]
name = "{{ package_name }}"
authors = [
    { name = "{{ author_name }}", email = "{{ author_email }}"}
]
description = "{{ plugin_short_description }}"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "{{ project_url }}"

[project.entry-points.'qiime2.plugins']
"{{ package_name }}" = "{{ module_name }}.plugin_setup:plugin"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe)$"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "{{ package_name }}/_version.py"

[tool.versioningit]
default-version = "1955-11-05"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["{{ module_name }}*"]

[tool.setuptools.package-data]
{{ module_name }} = ["**/*"]
